tests/snapshots/compile__wgsl_transform_wallpaper_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_mix14_amount: f32,
    u_control_rgba13_a: f32,
    u_control_rgba13_b: f32,
    u_control_rgba13_g: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
    u_control_vignette9_radius: f32,
    u_control_vignette9_softness: f32,
    u_opt_mix14_curve: i32,
    u_opt_mix14_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn cexp_i(angle: f32) -> vec2f { return vec2f(cos(angle), sin(angle)); }
fn getXY_square(z: vec2f) -> vec2f { return z; }
fn getXY_hex(z: vec2f) -> vec2f { return vec2f(z.x + z.y / sqrt(3.0), 2.0 * z.y / sqrt(3.0)); }
fn getXY_rect(z: vec2f, L: f32) -> vec2f { return vec2f(z.x, z.y / max(0.001, L)); }
fn getXY_rhombic(z: vec2f, b: f32) -> vec2f {
    let b_safe = max(0.001, b);
    return vec2f(z.x + z.y / (2.0 * b_safe), z.x - z.y / (2.0 * b_safe));
}
fn getXY_generic(z: vec2f, L: f32) -> vec2f {
    let omega = vec2f(0.5, L);
    let eta = max(0.001, omega.y);
    return vec2f(z.x - (omega.x / eta) * z.y, z.y / eta);
}
fn E_nm(nm: vec2f, XY: vec2f) -> vec2f { return cexp_i(2.0 * PI * dot(nm, XY)); }
fn T_nm(nm: vec2f, XY: vec2f) -> vec2f { return (E_nm(nm, XY) + E_nm(-nm, XY)) * 0.5; }
fn S_nm(nm: vec2f, XY: vec2f) -> vec2f {
    let nm2 = vec2f(nm.y, -nm.x);
    let nm3 = vec2f(-nm.x, -nm.y);
    let nm4 = vec2f(-nm.y, nm.x);
    return (E_nm(nm, XY) + E_nm(nm2, XY) + E_nm(nm3, XY) + E_nm(nm4, XY)) / 4.0;
}
fn W_nm(nm: vec2f, XY: vec2f) -> vec2f {
    let nm2 = vec2f(nm.y, -nm.x - nm.y);
    let nm3 = vec2f(-nm.x - nm.y, nm.x);
    return (E_nm(nm, XY) + E_nm(nm2, XY) + E_nm(nm3, XY)) / 3.0;
}

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette9_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette9_radius;
    let softness = max(u.u_control_vignette9_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn wallpaper1_output(uv: vec2f) -> vec4f {
    let z = uv * (vignette4_mask(uv));
    const nm1 = vec2f(1.0, 0.0);
    const nm2 = vec2f(0.0, 1.0);
    const nm3 = vec2f(1.0, 1.0);
    const nm4 = vec2f(1.0, -1.0);
    const nm5 = vec2f(2.0, 1.0);
    const nm6 = vec2f(1.0, 2.0);
    let XY = getXY_hex(z);
    let f = (vignette7_mask(uv)) * W_nm(nm1, XY)
           + (vignette8_mask(uv)) * W_nm(nm3, XY)
           + (vignette9_mask(uv)) * (W_nm(nm5, XY) + W_nm(nm6, XY));
    let finalUV = f * (vignette5_mask(uv)) + 0.5;
    return checkerboard3_output(finalUV);
}

fn wallpaper1_angle(uv: vec2f) -> f32 {
    let z = uv * (vignette4_mask(uv));
    const nm1 = vec2f(1.0, 0.0);
    const nm2 = vec2f(0.0, 1.0);
    const nm3 = vec2f(1.0, 1.0);
    const nm4 = vec2f(1.0, -1.0);
    const nm5 = vec2f(2.0, 1.0);
    const nm6 = vec2f(1.0, 2.0);
    let XY = getXY_hex(z);
    let f = (vignette7_mask(uv)) * W_nm(nm1, XY)
           + (vignette8_mask(uv)) * W_nm(nm3, XY)
           + (vignette9_mask(uv)) * (W_nm(nm5, XY) + W_nm(nm6, XY));
    return atan2(f.y, f.x) / (2.0 * PI) + 0.5;
}

fn rgba13_output(uv: vec2f) -> vec4f {
    return vec4f(wallpaper1_angle(uv), u.u_control_rgba13_g, u.u_control_rgba13_b, u.u_control_rgba13_a);
}

fn mix14_output(uv: vec2f) -> vec4f {
    let a = wallpaper1_output(uv);
    let b = rgba13_output(uv);
    let amt = clamp(u.u_control_mix14_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix14_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix14_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix14_output(uv);
}
