tests/snapshots/compile__wgsl_transform_wave_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_wave1_amplitude: f32,
    u_control_wave1_centerX: f32,
    u_control_wave1_centerY: f32,
    u_control_wave1_frequency: f32,
    u_control_wave1_phase: f32,
    u_control_wave1_rotation: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn wave1_output(uv: vec2f) -> vec4f {
    let amplitude = u.u_control_wave1_amplitude;
    let frequency = u.u_control_wave1_frequency;
    let phase = (u.u_control_wave1_phase) * 2.0 * PI;
    let rotation = (u.u_control_wave1_rotation) * 2.0 * PI;
    let center = vec2f(u.u_control_wave1_centerX, u.u_control_wave1_centerY);
    let cuv = uv - center;
    let cs = cos(rotation);
    let sn = sin(rotation);
    let rotUV = vec2f(cuv.x * cs + cuv.y * sn, -cuv.x * sn + cuv.y * cs);
    let wavePos = rotUV.y * frequency + phase;
    let wave = sin(wavePos);
    let displaced = vec2f(rotUV.x + wave * amplitude, rotUV.y);
    let displacedUV = vec2f(displaced.x * cs - displaced.y * sn, displaced.x * sn + displaced.y * cs) + center;
    return defaultUvMap(displacedUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return wave1_output(uv);
}
